<resources>
    <string name="app_name">MyShoeApp</string>
    <string name="app_title_view">App Title</string>
    <string name="email_view">Email</string>
    <string name="password_view">Password</string>
    <string name="email_edit_hint">Email</string>
    <string name="pwd_edit_hint">Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="dummy_text_1_view">Dummy text 1</string>
    <string name="dummy_text_2_view">Dummy text 2</string>
    <string name="log_out_item">Log out</string>
    <string name="name_text_view">Name: %1$s</string>
    <string name="size_text_view">Size: %1$s</string>
    <string name="company_text_view">Company: %1$s</string>
    <string name="description_text_view">Description: %1$s</string>
    <string name="new_shoe_details_text_view">New Shoe Details</string>
    <string name="name_new_shoe_view">Name</string>
    <string name="company_new_shoe_view">Company</string>
    <string name="size_new_shoe_view">Size</string>
    <string name="description_new_shoe_view">Description</string>
    <string name="save_btn_text">Save</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="size_edit_hint">0.0</string>
    <string name="name_edit_hint">Model name</string>
    <string name="company_edit_hint">Manufacturer name</string>
    <string name="description_edit_hint">description</string>

</resources>